# segmentation_trt

./: CMakeLists.txt  README.md  builder.sh  segmentation_trt.pro
include/: int8_calibrator.h  segmentation_trt.h  segmentator.h  trt_utils.h
src/: int8_calibrator.cpp  kernels.cu  segmentation_trt.cpp  segmentator.cpp  trt_utils.cpp
